--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -3,6 +3,7 @@
 @import "bootstrap-datepicker/bootstrap-datepicker";
 @import "theme";
 @import "properties";
+@import "list_classified";
 
 
 body {
