--- a/app/assets/stylesheets/list_classified.scss
+++ b/app/assets/stylesheets/list_classified.scss
@@ -1,3 +1,7 @@
-// Place all the styles related to the list_classified controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.listing-plan-radio{
+  height: 13px;
+  margin: 0px;
+}
+.listing-plan-label, .listing-plan-radio{
+  display: inline;
+}
