--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,7 +1,7 @@
 
 <!-- Banner
 ================================================== -->
-<div class="parallax" data-background="<%= asset_url 'home-parallax.jpg' %>" data-color="#36383e" data-color-opacity="0.45" data-img-width="2500" data-img-height="1600">
+<div class="parallax" data-background="" data-color="#36383e" data-color-opacity="0.45" data-img-width="2500" data-img-height="1600">
 	<div class="parallax-content">
 
 		<div class="container">
