--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -52,13 +52,10 @@
 
 							<div class="listing-carousel">
 								<div>
-                  <%= image_tag "listing-01.jpg" %>
                 </div>
 								<div>
-									<%= image_tag "listing-01b.jpg" %>
 								</div>
 								<div>
-									<%= image_tag "listing-01c.jpg" %>
 								</div>
 							</div>
 
@@ -108,7 +105,6 @@
 								<span class="compare-button with-tip" data-tip-content="Add to Compare"></span>
 							</div>
 
-              <%= image_tag "listing-02.jpg" %>
 
 						</a>
 
@@ -157,7 +153,6 @@
 								<span class="compare-button with-tip" data-tip-content="Add to Compare"></span>
 							</div>
 
-							<%= image_tag "listing-03.jpg" %>
 
 						</a>
 						<div class="listing-content">
@@ -208,10 +203,8 @@
 
 							<div class="listing-carousel">
 								<div>
-									<%= image_tag "listing-04.jpg" %>
 								</div>
 								<div>
-									<%= image_tag "listing-04b.jpg" %>
 								</div>
 							</div>
 
@@ -262,7 +255,6 @@
 								<span class="compare-button with-tip" data-tip-content="Add to Compare"></span>
 							</div>
 
-							<%= image_tag "listing-05.jpg" %>
 						</a>
 
 						<div class="listing-content">
@@ -400,7 +392,7 @@
 		<div class="col-md-4">
 
 			<!-- Image Box -->
-			<a href="listings-list-with-sidebar.html" class="img-box" data-background-image="<%= asset_url 'popular-location-01.jpg' %>">
+			<a href="listings-list-with-sidebar.html" class="img-box" data-background-image="">
 
 				<!-- Badge -->
 				<div class="listing-badges">
@@ -418,7 +410,7 @@
 		<div class="col-md-8">
 
 			<!-- Image Box -->
-			<a href="listings-list-with-sidebar.html" class="img-box" data-background-image="<%= asset_url 'popular-location-02.jpg' %>">
+			<a href="listings-list-with-sidebar.html" class="img-box" data-background-image="">
 				<div class="img-box-content visible">
 					<h4>Los Angeles</h4>
 					<span>24 Properties</span>
@@ -430,7 +422,7 @@
 		<div class="col-md-8">
 
 			<!-- Image Box -->
-			<a href="listings-list-with-sidebar.html" class="img-box" data-background-image="<%= asset_url 'popular-location-03.jpg' %>">
+			<a href="listings-list-with-sidebar.html" class="img-box" data-background-image="">
 				<div class="img-box-content visible">
 					<h4>San Francisco </h4>
 					<span>12 Properties</span>
@@ -442,7 +434,7 @@
 		<div class="col-md-4">
 
 			<!-- Image Box -->
-			<a href="listings-list-with-sidebar.html" class="img-box" data-background-image="<%= asset_url 'popular-location-04.jpg' %>">
+			<a href="listings-list-with-sidebar.html" class="img-box" data-background-image="">
 				<div class="img-box-content visible">
 					<h4>Miami</h4>
 					<span>9 Properties</span>
@@ -472,7 +464,6 @@
 
 					<!-- Img -->
 					<a href="blog-post.html" class="post-img">
-						<%= image_tag "blog-post-01.jpg" %>
 					</a>
 
 					<!-- Content -->
@@ -495,7 +486,6 @@
 
 					<!-- Img -->
 					<a href="blog-post.html" class="post-img">
-						<%= image_tag "blog-post-02.jpg" %>
 					</a>
 
 					<!-- Content -->
@@ -518,7 +508,6 @@
 
 					<!-- Img -->
 					<a href="blog-post.html" class="post-img">
-						<%= image_tag "blog-post-03.jpg" %>
 					</a>
 
 					<!-- Content -->
