--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -530,7 +530,7 @@
 
 
 <!-- Flip banner -->
-<a href="listings-half-map-grid-standard.html" class="flip-banner parallax" data-background="<%= asset_url 'flip-banner-bg.jpg' %>" data-color="#274abb" data-color-opacity="0.9" data-img-width="2500" data-img-height="1600">
+<a href="listings-half-map-grid-standard.html" class="flip-banner parallax" data-background="" data-color="#274abb" data-color-opacity="0.9" data-img-width="2500" data-img-height="1600">
 	<div class="flip-banner-content">
 		<h2 class="flip-visible">We help people and homes find each other</h2>
 		<h2 class="flip-hidden">Browse Properties <i class="sl sl-icon-arrow-right"></i></h2>
