--- a/app/views/list_classifieds/_company_fields.html.erb
+++ b/app/views/list_classifieds/_company_fields.html.erb
@@ -50,5 +50,5 @@
 
 <div class="field">
   <%= f.label :logo %>
-  <%= f.text_field :logo, id: :company_logo %>
+  <%= f.file_field :logo, direct_upload: true %>
 </div>
