--- a/app/views/classified_listings/show.html.erb
+++ b/app/views/classified_listings/show.html.erb
@@ -10,5 +10,11 @@
   <%= @classified_listing.description %>
 </p>
 
+<p>
+  <% @classified_listing.images.each do |image| %>
+    <%= image_tag image %>
+  <% end %>
+</p>
+
 <%= link_to 'Edit', edit_classified_listing_path(@classified_listing) %> |
 <%= link_to 'Back', classified_listings_path %>
