--- a/app/assets/theme/css/style.css
+++ b/app/assets/theme/css/style.css
@@ -71,7 +71,7 @@
 /* 01. Import Section
 ---------------------------------------------------------------------- */
 @import "bootstrap";					/* Default Reset, Typography, Forms, Responsive Grid etc. */
-@import "icons.css";						/* Webfont Icons: FontAwesome, Line, Simple Line */
+@import "icons";						/* Webfont Icons: FontAwesome, Line, Simple Line */
 @import url("https://fonts.googleapis.com/css?family=Varela+Round");
 
 
@@ -10345,11 +10345,11 @@ body .notification strong { border: none; }
 /* Web Font */
 @font-face {
   font-family: 'fontello';
-  src: url('fontello.eot');
-  src: url('fontello.eot') format('embedded-opentype'),
-	   url('fontello.woff') format('woff'),
-	   url('fontello.ttf') format('truetype'),
-	   url('fontello.svg') format('svg');
+  src: asset-url('fontello.eot');
+  src: asset-url('fontello.eot') format('embedded-opentype'),
+	   asset-url('fontello.woff') format('woff'),
+	   asset-url('fontello.ttf') format('truetype'),
+	   asset-url('fontello.svg') format('svg');
   font-weight: normal;
   font-style: normal;
 }
