Separate login and register

--- a/app/assets/theme/css/icons.scss
+++ b/app/assets/theme/css/icons.scss
@@ -2747,11 +2747,11 @@
 
 @font-face {
   font-family: 'iconsmind';
-  src:assest-url('iconsmind.eot?-rdmvgc');
-  src:assest-url('iconsmind.eot?#iefix-rdmvgc') format('embedded-opentype'),
-    assest-url('iconsmind.woff?-rdmvgc') format('woff'),
-    assest-url('iconsmind.ttf?-rdmvgc') format('truetype'),
-    assest-url('iconsmind.svg?-rdmvgc#iconsmind') format('svg');
+  src:url('iconsmind.eot?-rdmvgc');
+  src:url('iconsmind.eot?#iefix-rdmvgc') format('embedded-opentype'),
+    url('iconsmind.woff?-rdmvgc') format('woff'),
+    url('iconsmind.ttf?-rdmvgc') format('truetype'),
+    url('iconsmind.svg?-rdmvgc#iconsmind') format('svg');
   font-weight: normal;
   font-style: normal;
 }
