--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -130,13 +130,22 @@
     							<li><%= link_to edit_user_registration_path(current_user) do %><i class="sl sl-icon-user"></i> My Profile<% end %></li>
     							<li><%= link_to bookmarked_listing_path do %><i class="sl sl-icon-star"></i> Bookmarks <% end %></li>
     							<li><a href="my-properties.html"><i class="sl sl-icon-docs"></i> My Properties</a></li>
-    							<li><a href="index.html"><i class="sl sl-icon-power"></i> Log Out</a></li>
+    							<li>
+                    <%= link_to destroy_user_session_path, method: :delete do %>
+                      <i class="sl sl-icon-power"></i> Log Out
+                    <% end %>
+                  </li>
     						</ul>
     					</div>
               <% else %>
-              <%= link_to new_user_session_path do %>
-    					  <i class="fa fa-user"></i> Log In / Register
-              <% end %>
+                <%= link_to new_user_session_path do %>
+      					  <i class="fa fa-user"></i> Log In
+                <% end %>
+                 /
+                <%= link_to new_user_registration_path do %>
+      					  <i class="fa fa-user"></i> Register
+                <% end %>
+
               <% end %>
     				</div>
     				<!-- Header Widget / End -->
