--- a/app/views/agencies/show.html.erb
+++ b/app/views/agencies/show.html.erb
@@ -5,7 +5,7 @@
 		<div class="row">
 			<div class="col-md-12">
 
-				<h2><%= @agency.name.humanize %></h2>
+				<h2><%= @agency.fullname.humanize %></h2>
 
 				<!-- Breadcrumbs -->
 				<nav id="breadcrumbs">
@@ -17,7 +17,7 @@
 						  <%= link_to "Agencies", agencies_path %>
 						</li>
 						<li>
-						  <%= @agency.name.humanize %>
+						  <%= @agency.fullname.humanize %>
 						</li>
 					</ul>
 				</nav>
@@ -147,8 +147,6 @@
 
 				</div>
 				<!-- Widget / End -->
-
-
 
 			</div>
 		</div>
