Add agency profile setup page

--- a/app/views/agencies/edit.html.erb
+++ b/app/views/agencies/edit.html.erb
@@ -1,4 +1,95 @@
-<%= form_with model: @agency do |form| %>
-  <%= form.text_field :email %>
-  <%= form.submit %>
-<% end %>
+<!-- Titlebar
+================================================== -->
+<div id="titlebar">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-12">
+
+				<h2>Agency Profile Setup</h2>
+
+			</div>
+		</div>
+	</div>
+</div>
+<div class="container">
+  <%= form_with model: @agency do |form| %>
+    <div>
+      <%= form.label :name %>
+      <%= form.text_field :name %>
+    </div>
+    <div>
+      <%= form.label :description, 'About'%>
+      <%= form.text_area :description %>
+    </div>
+    <br>
+    <h4>Address</h4>
+    <div class="row">
+      <div class="col-md-4">
+        <%= form.label :country %>
+        <select name="country" data-placeholder="Select Country" class="chosen-select", id="country" >
+          <option value="">Select Country</option>
+            <%= options_for_select(
+              CS.countries.invert
+            ) %>
+        </select>
+      </div>
+      <div class="col-md-4">
+        <%= form.label :state %>
+        <select name="state" data-placeholder="All States" class="chosen-select", id="state" >
+          <option value="">All States</option>
+
+        </select>
+      </div>
+      <div class="col-md-4">
+        <%= form.label :city %>
+        <select name="city" data-placeholder="All Cities" class="chosen-select" id="city" >
+          <option value="">All Cities</option>
+
+        </select>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-4">
+        <%= form.label :zipcode, 'Postcode' %>
+        <%= form.text_field :zipcode %>
+      </div>
+    </div>
+    <br>
+    <h4>Contact Details</h4>
+
+    <div class="row">
+      <div class="col-md-8">
+        <%= form.label :email, 'Email Address' %>
+        <%= form.text_field :email %>
+      </div>
+      <div class="col-md-4">
+        <%= form.label :phone_number %>
+        <%= form.text_field :phone_number %>
+      </div>
+    </div>
+    <br>
+    <h4>Social Media</h4>
+
+		<%= form.fields_for :social_links do |social_link_form| %>
+			<%= render 'shared/social_link_fields', f: social_link_form %>
+		<% end %>
+
+		<div class="add-service">
+			<%= link_to_add_association 'Add Social Link', form, :social_links, partial: 'shared/social_link_fields' %>
+		</div>
+
+    <br>
+
+		<div>
+			<%= form.label :photo %>
+			<%= form.file_field :photo, direct_upload: true %>
+		</div>
+
+		<div>
+			<%= form.label :cover_photo %>
+			<%= form.file_field :cover_photo, direct_upload: true %>
+		</div>
+
+    <%= form.button 'Save' ,class: "button margin-bottom-20" %>
+  <% end %>
+</div>
