--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -7,7 +7,7 @@
     <p class="form-row form-row-wide">
       <label for="username2">Full Name:
         <i class="im im-icon-Male"></i>
-        <%= f.text_field :fullname, autofocus: true, class: "input-text" %>
+        <%= f.text_field :name, autofocus: true, class: "input-text" %>
       </label>
     </p>
 
