Fix update action for agencies

--- a/app/views/agencies/_agency.html.erb
+++ b/app/views/agencies/_agency.html.erb
@@ -3,7 +3,7 @@
 
   <a href="agency-page.html" class="">
   <%= link_to agency_path(agency), class: "agent-avatar" do %>
-
+    <%= image_tag agency.photo %>
   <% end %>
 
   <div class="agent-content">
