--- a/app/views/agents/new.html.erb
+++ b/app/views/agents/new.html.erb
@@ -1,76 +1,85 @@
-<div class="row">
-  <div class="col-md-3">
-    <%= render 'shared/agent_setting_sidebar' %>
-  </div>
-  <div class="col-md-9">
-    <div class="panel panel-default">
-      <div class="panel-heading">Agents</div>
-      <div class="panel-body">
-        <div class="container">
-          <%= form_for :agent, url: agents_path, html: {id: 'agentForm'} do |f| %>
-            <div class="form-group">
-              <label>Select Role</label>
-            </div>
-            <div class="form-group">
-              <label>Email</label>
-              <%= f.text_field :email, class: "form-control", placeholder: "email" %>
-            </div>
-            <div class="form-group">
-              <label>Name</label>
-              <%= f.text_field :name, class: "form-control", placeholder: "agent name" %>
-            </div>
-            <div class="form-group">
-              <label>Photo</label>
-              <%= f.file_field :photo, class: "form-control" %>
-            </div>
-            <div class="form-group">
-              <label>Cover Photo</label>
-              <%= f.file_field :cover_photo, class: "form-control" %>
-            </div>
-            <div class="form-group">
-              <label>Title</label>
-              <%= f.text_field :title, class: "form-control", placeholder: "Agent's title" %>
-            </div>
-            <div class="form-group">
-              <label>Phone Number</label>
-              <%= f.text_field :phone_number, class: "form-control", placeholder: "Phone name" %>
-            </div>
-            <div class="form-group">
-              <label>How many years of experience</label>
-              <%= f.text_field :years_experience, class: "form-control", placeholder: "5" %>
-            </div>
-            <div class="form-group">
-              <label>Description</label>
-              <%= f.text_area :description, class: "form-control", rows: 10 %>
-            </div>
-            <div class="form-group">
-              <label>Address</label>
-              <%= f.text_field :address, class: "form-control", placeholder: "address" %>
-            </div>
+<%= render 'dashboards/agency_dashboard' do %>
+  <div class="row">
+    <div class="container">
+      <h3>Add an agent</h3>
 
-            <div class="form-group">
-              <label>Country</label>
-              <%= f.select :country, CS.countries.map { |k, v| [v, k]}, {include_blank: true}, {class: 'countrySelect'} %>
-            </div>
+      <%= form_for :agent, url: agents_path do |f| %>
 
-            <div class="form-group">
-              <label>State/Province</label>
-              <%= f.select :state, [], {}, {class: 'stateSelect'} %>
-            </div>
-
-            <div class="form-group">
-              <label>City</label>
-              <%= f.select :city, [], {}, {class: 'citySelect'} %>
-            </div>
-
-            <%= f.submit :submit, class: "btn btn-normal" %>
-          <% end %>
-          <%= form_for :region, url: region_search_path, remote: true, html: {class: 'selectedRegion', style: 'display: none'} do |f| %>
-            <input class="selectedCountry" name="region[country]" hidden>
-            <input class="selectedState" name="region[state]" hidden>
-          <% end %>
+        <div class="">
+          <label>Email</label>
+          <%= f.text_field :email %>
         </div>
-      </div>
+
+        <div class="">
+          <label>Name</label>
+          <%= f.text_field :name %>
+        </div>
+
+        <div class="">
+          <label>Photo</label>
+          <%= f.file_field :photo %>
+        </div>
+
+        <div class="">
+          <label>Cover Photo</label>
+          <%= f.file_field :cover_photo %>
+        </div>
+
+        <div class="">
+          <label>Title</label>
+          <%= f.text_field :title %>
+        </div>
+
+        <div class="">
+          <label>Phone Number</label>
+          <%= f.text_field :phone_number %>
+        </div>
+
+        <div class="">
+          <label>How many years of experience</label>
+          <%= f.text_field :years_experience %>
+        </div>
+
+        <div class="">
+          <label>Description</label>
+          <%= f.text_area :description %>
+        </div>
+
+        <div class="">
+          <label>Address</label>
+          <%= f.text_field :address %>
+        </div>
+
+        <div class="">
+          <%= f.label :country %>
+          <select name="agency[country]" data-placeholder="Select Country" class="chosen-select", id="country" >
+            <option value="">Select Country</option>
+              <%= options_for_select(
+                CS.countries.invert
+              ) %>
+          </select>
+        </div>
+        
+        <div class="">
+          <%= f.label :state %>
+          <select name="agency[state]" data-placeholder="All States" class="chosen-select", id="state" >
+            <option value="">All States</option>
+
+          </select>
+        </div>
+
+        <div class="">
+          <%= f.label :city %>
+          <select name="agency[city]" data-placeholder="All Cities" class="chosen-select" id="city" >
+            <option value="">All Cities</option>
+
+          </select>
+        </div>
+
+        <div>
+          <%= f.button :submit, class: "button margin-top-20" %>
+        </div>
+      <% end %>
     </div>
   </div>
-</div>
+<% end %>
