--- a/app/views/dashboards/index.html.erb
+++ b/app/views/dashboards/index.html.erb
@@ -1,4 +1,4 @@
-<div class="row">
+<!-- <div class="row">
   <div class="col-md-3">
     <div class="center">
       <%= image_tag avatar_url(current_user), class: "avatar-full" %>
@@ -20,24 +20,27 @@
       </div>
     </div>
   </div>
-  <div class="col-md-9">
+  <div class="col-md-9"> -->
 
     <!-- Notification -->
-    <div class="panel panel-default">
+    <!-- <div class="panel panel-default">
       <div class="panel-heading">Notifications</div>
       <div class="panel-body">
         <%= link_to notifications_path do %>
           You have <span id="num_of_unread"><%= current_user.unread %></span> notification(s).
         <% end %>
       </div>
-    </div>
+    </div> -->
 
     <!-- Your Listings -->
-    <div class="panel panel-default">
+    <!-- <div class="panel panel-default">
       <div class="panel-heading">Your Listings (<%= @rooms.length %>)</div>
       <div class="panel-body">
         <%= render partial: "rooms/rooms_list", locals: {rooms: @rooms} %>
       </div>
     </div>
   </div>
-</div>
+</div> -->
+<%= render 'agency_dashboard' do %>
+  <h4>Agency Dashboard</h4>
+<% end %>
