--- a/app/views/dashboards/_agent_dashboard.html.erb
+++ b/app/views/dashboards/_agent_dashboard.html.erb
@@ -5,7 +5,7 @@
 		<div class="row">
 			<div class="col-md-12">
 
-				<h2>Agency Dashboard</h2>
+				<h2>Agent Dashboard</h2>
 
 				<!-- Breadcrumbs -->
 				<nav id="breadcrumbs">
@@ -32,15 +32,15 @@
 
       	<div class="my-account-nav-container">
       		<ul class="my-account-nav">
-      			<li class="sub-nav-title">Manage Agents</li>
+      			<li class="sub-nav-title">Manage Properties</li>
       			<li>
-              <%= link_to new_agent_path do %>
-                <i class="im im-icon-Add-User"></i> Add Agent
+              <%= link_to new_property_path do %>
+                <i class="sl sl-icon-action-redo"></i> List Property
               <% end %>
             </li>
       			<li>
               <%= link_to agents_path do %>
-                <i class="sl sl-icon-star"></i> All Agents
+                <i class="im im-icon-Home-5"></i> All Properties
                <% end %>
             </li>
       		</ul>
